2009-07-31  David Engster  <dengste@eml.cc>

	* sb-slashdot.el (shimbun-slashdot-regexp-section-id-subject): Adapt to
	new CSS.

2009-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-clear-contents): Fix regexp matching
	content start.

2009-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-tech-on.el (shimbun-clear-contents): Rewrite.

2009-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-clear-contents): New override.
	(shimbun-make-contents): Remove override.

2009-05-30  David Engster  <dengste@eml.cc>

	* sb-slashdot.el (shimbun-slashdot-regexp-section-id-subject)
	(shimbun-slashdot-get-headers): Adapt to new URL scheme.

2009-05-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-get-headers): Retrieve also "flash" index page
	for "news" group.

2009-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-get-headers): Ignore unwanted links in non-RSS
	index pages.

2009-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-get-headers): Don't stop fetching headers in
	the succeeding pages if index range is specified even if url having
	been fetched is found, because Yahoo! updates indices very often;
	make range control work properly.

2009-05-13  David Engster  <dengste@eml.cc>

	* sb-rss-hash.el (shimbun-rss-build-message-id): New override so that
	URL is not stripped at question mark.

2009-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-yahoo-content-end): Update.
	(shimbun-make-contents): Narrow to article body first.

	* sb-m17n.el (shimbun-get-headers): Update archive url.

2009-05-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-yahoo-groups-table): Fix default regexp; add
	"news" group.
	(shimbun-index-url): Add special treatment for "news" group.
	(shimbun-get-headers): Ignore unwanted links in "news" group; don't
	lose a link that the default regexp skips; don't stop fetching headers
	in the first page.
